# OpenCVProject

./: README.md
CLion/Test/: CMakeLists.txt
ColorCluster/: CMakeLists.txt  main.cpp
MSERTest/: CMakeLists.txt  main.cpp
RamonORC/: CMakeLists.txt  main.cpp
TextDect/: CMakeLists.txt  textdetection.cpp
